# solang-vscode

./: README.md  package-lock.json  package.json
.github/: settings.yml
.github/workflows/: ci.yaml  rust.yaml
docs/: diagnostics.md
solang-server/: Cargo.toml
solang-server/src/: ServerUtils.rs  main.rs
solang-server/src/ServerUtils/: backend.rs
solang-server/src/serverutils/: backend.rs
src/: dummy.js  extension.ts  server.ts
src/client/: extension.ts
src/server/: server.ts
src/test/suite/: extension.test.ts  helper.ts  index.ts
tower-lsp/examples/: server_eg.rs
