[package]
name = "solang-server"
version = "0.1.0"
authors = ["Shivam Balikondwar <shivambalikondwar@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "0.5"
solang = { git= "https://github.com/hyperledger-labs/solang" }
dashmap = "3.5.1"
futures = { version = "0.3", features = ["compat"] }
jsonrpc-core = "14.0"
jsonrpc-derive = "14.0"
log = "0.4"
lsp-types = "0.74"
nom = { version = "5.1", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["rt-core", "io-std", "macros", "test-util"] }
tokio-util = { version = "0.3", features = ["codec"] }
tower-lsp = "0.11"
tower-service = "0.3"
env_logger = "0.7"
tower-test = "0.3"
